# asphalt-web

./: .pre-commit-config.yaml  .travis.yml  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
asphalt/web/: api.py  component.py  context.py  endpoint.py  exceptions.py  request.py  response.py  router.py  static.py  utils.py  websocket.py
asphalt/web/rpc/: base.py  jsonrpc.py
asphalt/web/rpc/xmlrpc/: __init__.py  endpoint.py
asphalt/web/servers/: base.py  fastcgi.py  http.py
asphalt/web/session/stores/: base.py  memory.py  mongodb.py  sqlalchemy.py
asphalt/web/web/: api.py  component.py  exceptions.py  router.py  websocket.py
asphalt/web/web/rpc/: jsonrpc.py
asphalt/web/web/rpc/xmlrpc/: endpoint.py  serialization.py
asphalt/web/web/servers/: http.py
asphalt/web/web/session/: __init__.py
asphalt/web/web/session/stores/: memory.py  mongodb.py
docs/: conf.py  configuration.rst  contributing.rst  index.rst  integrations.rst  testing.rst  usage.rst  versionhistory.rst  websockets.rst
docs/modules/: aiohttp.rst  asgi.rst  client.rst  component.rst  context.rst  django.rst  events.rst  fastapi.rst  litestar.rst  router.rst  serializers.rst  starlette.rst  utils.rst
examples/aiohttp/: README.rst  config.yaml  dynamic.py  example.py  static.py
examples/asgi/: README.rst  config.yaml  example.py  static.py
examples/asgi3/: README.rst  config.yaml  static.py
examples/django/: README.rst  config.yaml
examples/django/django_example/: asgi.py  component.py  settings.py  urls.py  views.py  wsgi.py
examples/fastapi/: README.rst  config.yaml  dynamic.py  example.py  static.py
examples/litestar/: README.rst  config.yaml  dynamic.py  static.py
examples/starlette/: README.rst  config.yaml  dynamic.py  example.py  static.py
src/asphalt/web/: _utils.py  aiohttp.py  asgi.py  asgi3.py  django.py  fastapi.py  litestar.py  starlette.py
tests/: conftest.py  test_aiohttp.py  test_asgi.py  test_asgi3.py  test_django.py  test_fastapi.py  test_litestar.py  test_request.py  test_starlette.py  test_utils.py
tests/django_app/: asgi.py  settings.py  urls.py  views.py
tests/rpc/: test_jsonrpc.py
tests/rpc/xmlrpc/: test_serialization.py
