[build-system]
requires = [
    "setuptools >= 61",
    "setuptools_scm[toml] >= 6.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "asphalt-web"
description = "Web framework integrations for the Asphalt framework"
readme = "README.rst"
authors = [{name = "Alex Grönholm", email = "alex.gronholm@nextday.fi"}]
license = {text = "Apache License 2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Typing :: Typed",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.7"
dependencies = [
    "aiohttp >= 3.8; (extra == 'test' or extra == 'doc' or extra == 'aiohttp') and python_version < '3.11'",
    "asgiref ~= 3.5; extra == 'test' or extra == 'doc' or extra == 'asgi3' or extra == 'starlette' or extra == 'fastapi' or extra == 'django'",
    "asphalt ~= 4.8",
    "Django >= 3.2; (extra == 'test' and platform_python_implementation == 'CPython') or extra == 'doc' or extra == 'django'",
    "fastapi >= 0.75; extra == 'test' or extra == 'doc' or extra == 'fastapi'",
    "starlette >= 0.17; extra == 'test' or extra == 'doc' or extra == 'starlette'",
    "uvicorn >= 0.17.6; extra == 'test' or extra == 'doc' or extra == 'asgi3' or extra == 'starlette' or extra == 'fastapi' or extra == 'django'",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://asphalt-web.readthedocs.org/en/latest/"
"Source code" = "https://github.com/asphalt-framework/asphalt-web"
"Issue tracker" = "https://github.com/asphalt-framework/asphalt-web/issues"
"Help and support" = "https://github.com/asphalt-framework/asphalt/wiki/Help-and-support"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "websockets"
]
doc = [
    "Sphinx",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints >= 1.2.0",
    "sphinx-tabs >= 3.3.1"
]
aiohttp = []
django = []
fastapi = []
starlette = []

[project.entry-points."asphalt.components"]
aiohttp = "asphalt.web.aiohttp:AIOHTTPComponent"
asgi3 = "asphalt.web.asgi3:ASGIComponent"
django = "asphalt.web.django:DjangoComponent"
fastapi = "asphalt.web.fastapi:FastAPIComponent"
starlette = "asphalt.web.starlette:StarletteComponent"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.isort]
src_paths = ["src"]
skip_gitignore = true
profile = "black"

[tool.flake8]
max-line-length = 99

[tool.pytest.ini_options]
addopts = "-rsx --tb=short"
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.7"

[tool.coverage.run]
source = ["asphalt.web"]
relative_files = true
branch = true

[tool.coverage.report]
show_missing = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37, py38, py39, py310, py311, pypy3
skip_missing_interpreters = true
isolated_build = true

[testenv]
extras = test
commands = python -m pytest {posargs}

[testenv:docs]
extras = doc
commands = sphinx-build docs build/sphinx
"""
